# docs/swagger.json
@@ -180,8 +180,13 @@
                 }
             }
         },
-        "/trigger/{org}/{name}/{status}": {
+        "/trigger/{name}/{status}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "update mousetrap status",
                 "consumes": [
                     "application/json"
